# ipba-engineering

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 00_context.ipynb  00_engineering_context.ipynb  README.md
results/: 00_engineering_context.json
src/: __init__.py  export.py  figures.py  paths.py  validation.py
src/benefits_distribution/: __init__.py  context.py  export.py  paths.py  validation.py
src/ibpa_engineering/: context.py  export.py  paths.py  validation.py
