[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibpa-engineering"
version = "0.1.0"
description = "Engineering implementation of Information-Bundling Position Auctions (IBPA)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "numpy>=2.0",
  "matplotlib>=3.9"
]

[tool.setuptools.packages.find]
where = ["src"]
